# Napcat-PythonSDK

./: .copilot-codeGeneration-instructions.md  .copilot-pull-request-description-instructions.md  .version  README.md  api.py  llms.txt  pyproject.toml  update_log.md
data/: api2id.json  api_id_index.json  api_tree.json  endpoint_index.json  field_descriptions.json  zh2en.json
data/api_json/: 226656553e0.json  226656598e0.json  226656652e0.json  226656707e0.json  226656712e0.json  226656717e0.json  226656748e0.json  226656791e0.json  226656802e0.json  226656815e0.json  226656913e0.json  226656919e0.json  226656926e0.json  226656931e0.json  226656932e0.json  226656947e0.json  226656952e0.json  226656970e0.json  226656976e0.json  226656979e0.json  226656992e0.json  226657019e0.json  226657034e0.json  226657036e0.json  226657041e0.json  226657044e0.json  226657054e0.json  226657058e0.json  226657066e0.json  226657071e0.json  226657080e0.json  226657083e0.json  226657087e0.json  226657374e0.json  226657379e0.json  226657389e0.json  226657396e0.json  226657399e0.json  226657401e0.json  226658231e0.json  (+110 more)
data/api_meta/: 226656553e0.py  226656598e0.py  226656652e0.py  226656707e0.py  226656712e0.py  226656717e0.py  226656748e0.py  226656791e0.py  226656802e0.py  226656815e0.py  226656913e0.py  226656919e0.py  226656926e0.py  226656931e0.py  226656932e0.py  226656947e0.py  (+134 more)
docs/: README.MD  api_docs.md
scripts/: check_for_update.py  fetch_yaml.py  index.py  output.md  pyupgrade.py  readme.py  update_meta.py  yaml_to_json.py
test/: memo.md  test_get_friend_list_http_v1.py
(+1608 files in other folders)
